# erpnext-expense-management-module

./: README.md  pyproject.toml
erpnext_expenses/: hooks.py  modules.txt
erpnext_expenses/erpnext_expenses/doctype/expense/: expense.js  expense.json  expense.py  test_expense.py
erpnext_expenses/erpnext_expenses/doctype/expense_category/: expense_category.js  expense_category.json  expense_category.py  test_expense_category.py
erpnext_expenses/erpnext_expenses/doctype/expense_detail/: expense_detail.json  expense_detail.py
erpnext_expenses/erpnext_expenses/doctype/expense_report/: expense_report.js  expense_report.json  expense_report.py  test_expense_report.py
erpnext_expenses/erpnext_expenses/doctype/expense_splitting_detail/: expense_splitting_detail.json  expense_splitting_detail.py
erpnext_expenses/erpnext_expenses/doctype/expense_taxes/: expense_taxes.js  expense_taxes.json  expense_taxes.py  test_expense_taxes.py
erpnext_expenses/erpnext_expenses/doctype/expense_taxes_detail/: expense_taxes_detail.js  expense_taxes_detail.json  expense_taxes_detail.py  test_expense_taxes_detail.py
erpnext_expenses/erpnext_expenses/workspace/expenses/: expenses.json
erpnext_expenses/fixtures/: client_script.json  custom_field.json  print_format.json  property_setter.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
